# src_platform_verictl

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.ac
man/: Makefile.in  devctl.pod  verictl.pod
src/: Makefile.in  arglist.h  cmd.c  cmd.h  devctl.c  maps.h  options.c  options.h  parse.c  parse.h  veribypass.c  verictl.c  warn.h
